# LightDM-Contest-Greeter

./: CONFIG.md  Cargo.toml  README.md  build.rs  contestgreeter_interface.xml  flake.nix  install.sh
.github/workflows/: release.yml
contest-greeter-dbus/src/: lib.rs
src/: conf.rs  contest_api.rs  dbus.rs  lib.rs  main.rs
src/core/: greeter.rs  mod.rs
src/greeter/: mod.rs
src/lightdm/: mod.rs  sys.rs
src/ui/: background.rs  chain_listener.rs  config.rs  countdown.rs  login_ui.rs  mod.rs
tools/: config_docs.rs
types/: Cargo.toml
types/src/: bus.rs  lib.rs  messages.rs
